<resources>
    <string name="app_name">PhotoBlog</string>
    <string name="logologin">LogoLogin</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="login_to_accaunt">Login to Account</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="action_search_text">search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="create_account">Create new account</string>
    <string name="reg_login_text">Already have an account ?</string>
    <string name="reg_pass_text">Password ...</string>
    <string name="reg_confirm_pass_text">Confirm Password</string>
    <string name="setup_name_hint">Your Name ...</string>
    <string name="setup_btn_save_text">Save account settings</string>
    <string name="add_desc_hint">Add description</string>
    <string name="add_new_post">Post blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="comments">Comments:</string>
    <string name="your_comment">your comment ...</string>
</resources>
